--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -11,13 +11,13 @@
     <nav>
         <ul>
             <li>
-                <a>Sobre mim</a>
+                <a href="index.html">Sobre mim</a>
             </li>
             <li>
-                <a>Projetos</a>
+                <a href="project.html">Projetos</a>
             </li>
             <li>
-                <a>contato</a>
+                <a href="contact.html">contato</a>
             </li>
         </ul>
     </nav>
