--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -23,7 +23,9 @@
     </nav>
 
     <header>
-         <img src="./img/"></img>
+         <div class="center">
+             <img src="./img/"></img>
+         </div>
     </header>
 </body>
 </html>
