--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -26,6 +26,8 @@
          <div class="center">
              <img src="./img/"></img>
          </div>
+         <h1>Maísa</h1>
+         <h2>Estudante</h2>
     </header>
 </body>
 </html>
