--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -30,4 +30,13 @@
          <h2>Estudante</h2>
     </header>
 </body>
+<main>
+   <section>
+      <h3>Sobre Mim</h3>
+      <p>
+
+      </p>
+   </section>
+  </main>
+</body>
 </html>
