--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -38,5 +38,12 @@
       </p>
    </section>
   </main>
+
+  <footer>
+    <a>
+      <img src="./img/github.svg"></img>
+      <p>Github</p>
+    </a>
+  </footer>
 </body>
 </html>
