--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -40,8 +40,8 @@
   </main>
 
   <footer>
-    <a>
-      <img src="./img/github.svg"></img>
+    <a href="https // github.com/Maísa" target="_blank" rel="nooper noreferrer">
+      <img src="./img/github.svg"></img>"
       <p>Github</p>
     </a>
   </footer>
